tests/purs/failing/InvalidDerivedInstance.out
Error found:
in module [33mMain[0m
at tests/purs/failing/InvalidDerivedInstance.purs:8:1 - 8:30 (line 8, column 1 - line 8, column 30)

  The type class [33mData.Eq.Eq[0m expects 1 argument.
  But the instance [33meqX[0m provided 2.

in type class instance
[33m              [0m
[33m  Data.Eq.Eq X[0m
[33m             X[0m
[33m              [0m

See https://github.com/purescript/documentation/blob/master/errors/ClassInstanceArityMismatch.md for more information,
or to contribute content related to this error.

